@@ -16,6 +16,7 @@ lib/Config/Model/Tk/LeafEditor.pm
 lib/Config/Model/Tk/LeafViewer.pm
 lib/Config/Model/Tk/ListEditor.pm
 lib/Config/Model/Tk/ListViewer.pm
+lib/Config/Model/Tk/NodeEditor.pm
 lib/Config/Model/Tk/NodeViewer.pm
 lib/Config/Model/Tk/Wizard.pm
 lib/Config/Model/TkUI.pm
