@@ -1,4 +1,9 @@
-2009-09-03  Dominique Dumont  <dominique.dumont@hp.com> unreleased 1.301
+2009-09-04  Dominique Dumont  <dominique.dumont@hp.com>  unreleased 1.301
+
+	* lib/Config/Model/Tk/NodeEditor.pm: New widget to edit several
+	config items in the same widget.
+
+2009-09-03  Dominique Dumont  <dominique.dumont@hp.com>
 
 	* lib/Config/Model/Tk/NodeViewer.pm (Populate): Provide more
 	details (type and if possible value) on node elements.
